# genesis

./: BRAINSTORMING.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: evolver.md
.claude/skills/genesis-new/: SKILL.md
.github/workflows/: genesis-evolver.yml
docs/bootstrapping-sessions/: 001-repo-guardian.md
genctl/: Cargo.toml
genctl/src/: config.rs  issues.rs  log_cmd.rs  main.rs
genctl/tests/: cli_tests.rs
src/genesis/: github.py  scaffold.py
templates/: claude_md.md.j2  config.toml.j2  onboarding_issue.md.j2  readme.md.j2  settings.json
templates/agents/: evolver.md  health.md  human_interaction.md  introspective.md  onboarding.md  project_manager.md
templates/workflows/: genesis-events.yml  genesis-orchestrator.yml
tests/e2e/: conftest.py  test_existing_repo.py  test_github.py  test_multi_repo.py  test_new_repo.py  test_skill.py  test_workflows.py
