[project]
name = "genesis"
version = "0.1.0"
description = "Bootstrapper for autonomous agentic AI dev systems"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genesis"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
